--- a/_includes/nav-items.html
+++ b/_includes/nav-items.html
@@ -1,8 +1,5 @@
 <div class="nav-items">
   {%- for path in include.paths -%}
-  {%- assign hyperpage = site.pages | where: "path", path | first -%}
-  {%- if hyperpage.title %}
-  <a class="nav-item" href="{{ hyperpage.url | relative_url }}">{{ hyperpage.title | escape }}</a>
-  {%- endif -%}
+    <a class="nav-item" href="{{ path.link }}">{{ path.name }}</a>
   {%- endfor %}
 </div>
