Fix linking in 2025-04-27-the-art-of-learning.md

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,5 +46,12 @@ layout: base
     {% endif -%}
   {% endif -%}
 
+<!--  &lt;!&ndash; Giscus Comment Section &ndash;&gt;-->
+<!--  <section id="comments">-->
+<!--    <h2>Comments</h2>-->
+<!--    &lt;!&ndash; Paste Giscus script here &ndash;&gt;-->
+<!--  </section>-->
+
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
