--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,5 +18,19 @@
     {%- include sub-footer.html -%}
 
   </body>
-
+<!--  <script src="https://giscus.app/client.js"-->
+<!--          data-repo="KhasanovR/blog"-->
+<!--          data-repo-id="R_kgDOOiPMLw"-->
+<!--          data-category="Announcements"-->
+<!--          data-category-id="DIC_kwDOOiPML84CpyNg"-->
+<!--          data-mapping="pathname"-->
+<!--          data-strict="0"-->
+<!--          data-reactions-enabled="1"-->
+<!--          data-emit-metadata="0"-->
+<!--          data-input-position="bottom"-->
+<!--          data-theme="preferred_color_scheme"-->
+<!--          data-lang="en"-->
+<!--          crossorigin="anonymous"-->
+<!--          async>-->
+<!--  </script>-->
 </html>
